2001-11-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-md5): Remove `X-Face:'
	header before md5 calculation.

2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Skip top article.

2001-11-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-groups): Remove user option.
	(mew-shimbun-folder-groups): New user option.
	(mew-shimbun-element-body): New macro.
	(mew-shimbun-retrieve): Use `mew-shimbun-folder-groups' instead of
	`mew-shimbun-groups'. Use `mew-shimbun-element-body' macro.
	(mew-shimbun-retrieve-all): Ditto.
	(mew-shimbun-re-retrieve): Ditto.
	(mew-shimbun-re-retrieve-all): Ditto.
	(mew-shimbun-retrieve-article): Change mandatory option.
	(mew-shimbun-db-setup): Throw out old format support.

	* README.shimbun.ja (mew-shimbun.el): Modify description.

2001-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-index-url, shimbun-get-headers):
	Use the top page of each group instead of GROUP/update/list.html.

2001-11-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Added argument `empty'.
	(w3m-goto-url-new-session): Call `w3m-copy-buffer' with argument
	`empty'	non-nil; If new url has `name' portion, goto the base url
	first.
	(w3m-view-this-url): Likewise.

2001-11-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (DOCS): Add `FAQ'.

2001-11-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-parse-forms): Decode value of input tag.
	(w3m-form-replace): Use `w3m-get-text-property-around'.

	* w3m.el (w3m-parse-attributes): Add :decode-entity attribute.
	(w3m-decode-entities-string): New function.

2001-11-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-lynx-like-map): Remove binding of `C-tab' and `C-S-tab'
	Bind `C-cC-t' as the key to call `w3m-copy-buffer'.
	Bind `C-cC-p' as the key to call `w3m-previous-buffer'.